# rustitch

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
crates/rustitch/: Cargo.toml
crates/rustitch-auth/: Cargo.toml
crates/rustitch-auth/src/: api.rs  client.rs  error.rs  flow.rs  lib.rs  manager.rs  provider.rs  store.rs  token.rs
crates/rustitch-auth/tests/: auth_flows.rs
crates/rustitch-chat/: Cargo.toml
crates/rustitch-chat-irc/: Cargo.toml
crates/rustitch-chat-irc/src/: client.rs  config.rs  error.rs  lib.rs
crates/rustitch-chat/src/: client.rs  command.rs  error.rs  event.rs  lib.rs
crates/rustitch-core/: Cargo.toml
crates/rustitch-core/src/: config.rs  error.rs  id.rs  lib.rs  pagination.rs  rate_limit.rs  token.rs
crates/rustitch-eventsub/: Cargo.toml
crates/rustitch-eventsub/src/: client.rs  dispatch.rs  error.rs  lib.rs  manage.rs  model.rs  replay.rs  webhook.rs  websocket.rs
crates/rustitch-helix/: Cargo.toml
crates/rustitch-helix/src/: client.rs  error.rs  lib.rs  transport.rs
crates/rustitch-helix/src/endpoints/: channels.rs  chat.rs  eventsub.rs  mod.rs  moderation.rs  streams.rs  users.rs
crates/rustitch-helix/tests/: helix_client.rs
crates/rustitch/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
