[workspace]
resolver = "2"
members = [
    "crates/rustitch",
    "crates/rustitch-auth",
    "crates/rustitch-chat",
    "crates/rustitch-chat-irc",
    "crates/rustitch-core",
    "crates/rustitch-eventsub",
    "crates/rustitch-helix",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["NKWDR"]
license = "MIT"
repository = "https://github.com/inkwadra/rustitch"

[workspace.dependencies]
rustitch = { path = "crates/rustitch", version = "0.1.0", default-features = false }
rustitch-auth = { path = "crates/rustitch-auth", version = "0.1.0" }
rustitch-chat = { path = "crates/rustitch-chat", version = "0.1.0" }
rustitch-chat-irc = { path = "crates/rustitch-chat-irc", version = "0.1.0" }
rustitch-core = { path = "crates/rustitch-core", version = "0.1.0" }
rustitch-eventsub = { path = "crates/rustitch-eventsub", version = "0.1.0" }
rustitch-helix = { path = "crates/rustitch-helix", version = "0.1.0" }

axum = "0.8"
bytes = "1.10"
hmac = "0.12"
irc = "0.15"
oauth2 = { version = "5.0", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
module_name_repetitions = "allow"
todo = "warn"
unwrap_used = "warn"
