[package]
name = "rustitch-helix"
description = "Typed Helix client scaffolding and endpoint groups for rustitch."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest.workspace = true
rustitch-auth.workspace = true
rustitch-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
